Using RxJava from top to bottom
* Avoiding global variables
* `toList()` operator
* pushing more logic out of `Subscriber`
* `forEach()` directly on collection